# BotHousingAgent

./: .gitignore  CHANGELOG.md  README.md  Tasks.md  UserFeedbacks.md  bump_version.py  global-env.json  setup.cfg
app/: config_var.py  main.py
app/config/: config_loader.py
app/container/: app_container.py  core_container.py  db_container.py  scraping_container.py  service_container.py  telegram_container.py  template_container.py
app/context/: app_context.py
app/mongodb/: mongo_client.py
app/scraping/: http_client.py  scraping_controller.py
app/scraping/model/: listing.py  query_params.py  search_params.py
app/scraping/website/: base_loader.py  register.py
app/service/mongodb/: dao_controller_service.py  mongo_service.py
app/service/scraping/: scraping_service.py
app/service/search/: search_service.py
app/service/telegram/: telegram_service.py
app/service/template/: template_service.py
app/telegram/: bot_builder.py  bot_controller.py  bot_dispatcher.py  command_handlers.py  conversation_handlers.py  tg_app.py  tg_app_builder.py
app/telegram/handler/: loader.py  prepare_url.py
app/telegram/loader/: base_loader.py  components_loader.py  loader_controller.py  (+2 more)
app/template/: template_renderer.py
app/utils/: data_loader.py
debian_management/deploy/: process_steps.md
debian_management/logs_management/: service_logs.md
properties/yaml/: config-example.yml  config.yml
resources/: HowToRunVirtualEnvironment.md
templates/scraping/: managed.json
templates/telegram/: emoticons.md  managed.json
test/container/: test_services_container.py
(+88 files in other folders)
