[metadata]
name = bot-housing-agent
version = 0.17.0
author = AyoubTheTroller
author_email = ayoub50.as@gmail.com
description = A telegram bot that automates for you house search
long_description = file: README.md
long_description_content_type = text/markdown
changelog = file: CHANGELOG.md
url = https://github.com/AyoubTheTroller/BotHousingAgent

[options]
packages = app
python_requires = >=3.8
install_requires = 
	dependency_injector
	pymongo
	motor
	python-telegram-bot
	pydantic
	pystache
	aiohttp
	beautifulsoup4
	PyYAML
	asyncio
	aiogram

[options.entry_points]
console_scripts = 
	bot_housing_agent = app.main:run_bot

